refactor : SwaggerConfig에 @SecurityRequirement 어노테이션 추가 (인증 방식)